# CodeWorld

./: Archi.txt  Main.py  README.md  action_registry.py  brouillon.py  dataplayer_save.json  dialogue_manager.py  event_manager.py  fight.py  game.py  game_engine.py  inventaire.py  landing_menu.py  main.py  misc.py  monde.py  parser.py  playerstate.py  pyproject.toml  scenario.md  scene_manager.py  terminal.py  worldmanager.py
ConsoleApp1/: Character.cs  CsvToTabToCsv.cs  Fighter.cs  Player.cs  Pnj.cs
Python/: Main.py
Replit/: dicomain.txt  items.csv  repliques.csv  save.csv  scenario.txt
SceneTypes/: base_scene.py  dialogue_scene.py  hub_scene.py  null_scene.py  scene_registry.py  terminal.py
brouillon/: brouillon.md  scenario.md  temp.json
data/: characters_data.json  items_data.json  mob_data.json  mobs.csv  player_save.json
data/dialogues/: dialogue_template.json  dialogues.json  intro.json  intro.txt  repliques_pnj.json
data/regions/: test_world.json
data/scenes/: dialogue_intendant.json  dialogue_intendant.txt  intro.json  null_scene.json  port_avalon.json  ruelle_mysterieuse.json  test_dialogue_scene.json  test_dialogue_scene.txt  test_world.json
