[project]
name = "codeworld"
version = "0.1.0"
description = ""
authors = [
    {name = "Thblink1995",email = "145861430+Thblink1995@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich (>=14.3.2,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
